# fruit-manager

./: .dockerignore  .gitignore  Dockerfile  app.py  commandes_clients.py  fruit.py  fruit_manager.py  geolocalisation.py  main.py  plantation.py  pyproject.toml  readme.md  requirements.txt
pages/: 01_Plantations.py
