[project]
name = "fruit-manager"
version = "0.1.0"
description = ""
authors = [
    {name = "Guillaume",email = "mlearnia@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "streamlit (>=1.45.0,<2.0.0)",
    "matplotlib (>=3.10.1,<4.0.0)",
    "shapely (>=2.0,<3.0)",
    "requests (>=2.31,<3.0)",
    "plotly (>=5.22,<6.0)",
    "streamlit-plotly-events (>=0.0.6,<0.0.7)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
